k8s/backend.yaml
apiVersion: v1
kind: Pod

metadata:
  name: backend
  namespace: default
  labels:
    app: backend

spec:
  containers:
    - name: backend
      image: nginx:alpine
      ports:
        - containerPort: 80
