k8s/frontend.yaml
apiVersion: v1
kind: Pod

metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend

spec:
  containers:
    - name: frontend
      image: busybox
      command:
        - sleep
        - "3600"
